core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsAnonymousModeEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAnonymousModeEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>When enabled, any logs generated will not have any user-specific details set - any fields related to the User, Profile, etc. will be null. Note: this feature only works properly when using the save method EVENT_BUS.</inlineHelpText>
    <label>Enable Anonymous Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>