core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsDataMaskingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsDataMaskingEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>When enabled, any data-mask rules (configured in LogEntryDataMaskRule__mdt) will be automatically applied to log entry messages.</inlineHelpText>
    <label>Enable Data Masking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>