core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsJavaScriptLightningLoggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsJavaScriptLightningLoggerEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>When enabled, Nebula Logger will automatically call Salesforce's lightning-logger LWC when logging via lightning components. This then creates a 'Lightning Logger' event in Event Monitoring.</inlineHelpText>
    <label>Enable JavaScript lightning-logger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>