core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsLoggerEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsLoggerEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Is Logger Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>