core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsLogRetentionOverrideEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsLogRetentionOverrideEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>When enabled, the value specified in NumberOfDaysToRetainLogs__c (including null) will override the value specified in LoggerSettings__c.</inlineHelpText>
    <label>Enable Log Retention Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>