core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsRecordFieldStrippingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsRecordFieldStrippingEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>When enabled, any time an SObject record is logged, only fields that the current user can access will be included in the record's JSON.</inlineHelpText>
    <label>Strip Inaccessible Record Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>