core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/IsSavingEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSavingEnabled__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>Controls if saving is enabled - when disabled, any calls to saveLog() are ignored.</inlineHelpText>
    <label>Enable Saving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>