core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/PlatformEventStorageLocation__c.field-meta.xml
<CustomField>
    <fullName>PlatformEventStorageLocation__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <inlineHelpText>This controls the default location where LogEntryEvent__e records are stored - when null, LogEntryEvent__e records will not be stored.</inlineHelpText>
    <label>Platform Event Storage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>