core/unpackaged/main/default/objects/LoggerScenarioRule__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Scenario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>